testsuite/poke.pkl/try-catch-diag-5.pk
/* { dg-do compile } */

/* This tests that the emitted diagnostic has the right location.  */

fun foo = int:
  {
   try
     raise Exception {code = 1};
   catch if 10  /* { dg-error "invalid expression.*\n.*expected Exception" } */
   {
     raise Exception {code = 0};
   }
   return 666;
  }
